# knight

./: .gitignore  CMakeLists.txt
assets/: playerAnimations.anms  playerAttacks.atcks
src/: AssetsManager.cpp  AssetsManager.hpp  game.cpp  game.hpp  main.cpp
src/ECS/: AnimationSystem.cpp  AttackSystem.cpp  CollisionSystem.cpp  Components.cpp  Components.hpp  DrawSystem.cpp  ECS.hpp  HealthSystem.cpp  JumpSystem.cpp  KeyboardSystem.cpp  KeybordSystem.cpp  MovementSystem.cpp  Systems.hpp  TransformComponent.hpp
src/Events/: EventBuffer.cpp  EventBuffer.hpp
src/math/: matrix.hpp  vec2.cpp  vec2.hpp
